# healthcenter

HealthcenterAPointmentsystemdesktopapp/: CMakeLists.txt  Healthcenter.cpp  mainwindow.cpp  mainwindow.h
healthcentercpp/: Health.cpp  Healthcenter.cpp  health1.cpp
