cmake_minimum_required(VERSION 3.16)

project(HealthcenterAPointmentsystem LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)

qt_standard_project_setup()

qt_add_executable(appHealthcenterAPointmentsystem
    main.cpp
    mainwindow.cpp
    mainwindow.h
)

target_link_libraries(appHealthcenterAPointmentsystem
    PRIVATE Qt6::Widgets
)
